--- a/index.html
+++ b/index.html
@@ -4,133 +4,116 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carol Zhang</title>
+    <title>Qinshi (Carol) Zhang</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 
 <body>
     <div class="container">
         <nav>
-            <div class="logo">Qinshi (Carol) Zhang</div>
+            <div class="logo">Uni of California, San Diego</div>
             <div class="nav-links">
                 <a href="#home">Home</a>
-                <a href="#research-interests">Research Interests</a>
+                <a href="#research-interests">Research</a>
                 <a href="#publications">Publications</a>
                 <a href="#portfolio">Portfolio</a>
                 <a href="#news">News</a>
             </div>
         </nav>
 
-        <div class="location">
-            <i class="fas fa-map-marker-alt"></i>
-            <span>CA, San Diego</span>
-        </div>
-        <div class="affiliation">
-            <i class="fas fa-university"></i>
-            <span>University of California, San Diego</span>
-        </div>
-        <div class="contact-info">
-            <div class="social-links">
-                <!-- <p>Contact Info</p> -->
-                <a href="mailto:qiz065@ucsd.edu" title="Email"><i class="fas fa-envelope"></i></a>
-                <a href="https://scholar.google.com/citations?user=Zo0HnLwAAAAJ&hl=zh-CN&oi=ao"
-                    title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
-                <a href="https://github.com/Carolzhangzz" title="Github"><i class="fab fa-github"></i></a>
-                <a href="https://www.linkedin.com/in/qinshiz/" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                <a href="https://twitter.com/Carol_Zhang1027" title="X (formerly Twitter)"><i
-                        class="fab fa-twitter"></i></a>
+        <div class="main-content" id="home">
+            <div class="profile-section">
+                <img src="./images/carol.png" alt="Carol Zhang" class="profile-photo">
+                <div class="text-content">
+                    <h1>Qinshi (Carol) Zhang</h1>
+                    <p><i class="fas fa-map-marker-alt"></i> CA, San Diego</p>
+                    <p><i class="fas fa-university"></i> University of California, San Diego</p>
+                    <div class="social-links">
+                        <a href="mailto:qiz065@ucsd.edu" title="Email"><i class="fas fa-envelope"></i></a>
+                        <a href="https://scholar.google.com/citations?user=Zo0HnLwAAAAJ&hl=zh-CN&oi=ao"
+                            title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
+                        <a href="https://github.com/Carolzhangzz" title="Github"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/qinshiz/" title="LinkedIn"><i
+                                class="fab fa-linkedin"></i></a>
+                        <a href="https://twitter.com/Carol_Zhang1027" title="X (formerly Twitter)"><i
+                                class="fab fa-twitter"></i></a>
+                    </div>
+                    <p class="hint">🌟 Looking for PhD Positions in Fall 2025.</p>
+                    <p>Hi, I am Carol Zhang. A CS master student at UCSD, working with <a
+                            href="https://spdow.ucsd.edu/">Prof. Steven Dow</a>. I also have worked with <a
+                            href="https://www.scm.cityu.edu.hk/people/ray-lc">Dr.Ray LC</a> at HK CityU on AI for Social
+                        Good, resulting in a <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">co-first
+                            authored paper</a> published at CHI 2024.</p>
+                    <p>I obtained my Bachelor's degree in Computer Science and Technology from the School of Information
+                        Engineering at <a href="https://english.cjlu.edu.cn/">China Jiliang University (CJLU)</a> and
+                        another degree in Computer and Information Science at <a href="https://www.aut.ac.nz/">Auckland
+                            University of Technology (AUT)</a>, advised by Dr. Lin Xiang and Dr. Haijun Tao.</p>
+                </div>
             </div>
         </div>
-        <div class="main-content" id="main-content">
 
-            <div class="text-content" id="home">
-                <img src="./images/carol.png" alt="Carol Zhang" class="profile-photo desktop-only">
-                <p></i> Looking for PhD Positions in Fall 2025.
-                    <br><br>
-                    Hi, I am Carol Zhang. A CS master student at UCSD, working with <a
-                        href="https://spdow.ucsd.edu/">Prof. Steven Dow</a>.
-                    I also have worked with <a href="https://www.scm.cityu.edu.hk/people/ray-lc">Dr.Ray LC</a> at HK
-                    CityU on AI for Social Good, resulting in a <a
-                        href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">co-first authored paper</a>
-                    published at CHI 2024.
-                    <br><br>
-                    I obtained my Bachelor's degree in Computer Science and Technology from the School of Information
-                    Engineering at <a href="https://english.cjlu.edu.cn/">China Jiliang University (CJLU)</a> and
-                    another degree in Computer and Information Science at <a href="https://www.aut.ac.nz/">Auckland
-                        University of Technology (AUT)</a>, advised by
-                    Dr. Lin Xiang and Dr. Haijun Tao.
-                </p>
-            </div>
-        </div>
         <section id="research-interests">
-            <h2>/Research Interests</h2>
+            <h2>Research Interests</h2>
             <p>My research interests lie in <a>Human-AI Interaction for Social Impact</a> and <a>AI For Social Good</a>,
                 especially the societal impact of technologies, surrounding sustainability, privacy leakage, and social
                 justice concerns in general.</p>
         </section>
+
         <section id="publications">
-            <h2>/Publications</h2>
-            <div class="publications-list">
-                <p>Notes: * indicates equal contribution. † indicates corresponding Author.</p>
-                <div class="publication-item">
-                    <h3><a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">Eternagram: Probing Player
-                            Attitudes in Alternate Climate Scenarios Through a ChatGPT-Driven Text Adventure</a></h3>
-                    <p>Suifang Zhou*, Latisha Besariani Hendra*, <strong>Qinshi Zhang*</strong>, Jussi Holopainen, Ray
-                        LC† </p>
-                    <p>CHI Conference on Human Factors in Computing Systems 2024</p>
-                    <div class="publication-links">
-                        <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">[PDF]</a>
-                        <a href="https://github.com/latishab/eternagram">[Project Page]</a>
-                    </div>
+            <h2>Publications</h2>
+            <p>Notes: * indicates equal contribution. † indicates corresponding Author.</p>
+            <div class="publication-item">
+                <h3><a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">Eternagram: Probing Player Attitudes in
+                        Alternate Climate Scenarios Through a ChatGPT-Driven Text Adventure</a></h3>
+                <p>Suifang Zhou*, Latisha Besariani Hendra*, <strong>Qinshi Zhang*</strong>, Jussi Holopainen, Ray LC†
+                </p>
+                <p>CHI Conference on Human Factors in Computing Systems 2024</p>
+                <div class="publication-links">
+                    <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">[PDF]</a>
+                    <a href="https://github.com/latishab/eternagram">[Project Page]</a>
+                </div>
+            </div>
+            <div class="publication-item">
+                <h3><a href="https://arxiv.org/abs/2408.00778">Frontend Diffusion: Exploring Intent-Based User
+                        Interfaces through Abstract-to-Detailed Task Transitions</a></h3>
+                <p><strong>Qinshi Zhang</strong>, Latisha Besariani Hendra, Mohan Chi, Zijian Ding†</p>
+                <p>Preprint</p>
+                <div class="publication-links">
+                    <a href="https://arxiv.org/abs/2408.00778">[Arxiv]</a>
+                    <a href="https://github.com/Carolzhangzz/frontendiffusion?tab=readme-ov-file">[Project Page]</a>
                 </div>
             </div>
         </section>
-        <section id="publications">
-            <div class="publications-list-2">
-                <div class="publication-item">
-                    <h3><a href="https://arxiv.org/abs/2408.00778">Frontend Diffusion: Exploring Intent-Based User
-                            Interfaces through Abstract-to-Detailed Task Transitions</a></h3>
-                    <p><strong>Qinshi Zhang</strong>, Latisha Besariani Hendra, Mohan Chi, Zijian Ding†</p>
-                    <p>Preprint</p>
-                    <div class="publication-links">
-                        <a href="https://arxiv.org/abs/2408.00778">[Arxiv]</a>
-                        <a href="https://github.com/Carolzhangzz/frontendiffusion?tab=readme-ov-file">[Project Page]</a>
-                    </div>
-                </div>
-            </div>
-        </section>
+
         <section id="portfolio">
-            <h2>/portfolio</h2>
-            <p>Here are some of the projects I've worked on:</p>
+            <h2>Portfolio</h2>
             <div class="portfolio-item">
                 <h3>Eternagram</h3>
-                <p>Latisha Besariani Hendra (Back-End), Qinshi Zhang (Front-End), Suifang Zhou (Game Design)</p>
-                <img src="./images/Etergram.png" alt="Project 1 Image">
-                <p>ETERNAGRAM is a text-based adventure game, as players slowly begin to unravel the stories in the
-                    distant world by conversing with Ryno through Eternagram, they discover ways to move around in the
-                    world by telling Ryno, and learn about the mysteries of the world.</p>
+                <img src="./images/Etergram.png" alt="Eternagram Project">
+                <p><strong>Team:</strong> Latisha Besariani Hendra (Back-End), Qinshi Zhang (Front-End), Suifang Zhou
+                    (Game Design)</p>
+                <p>ETERNAGRAM: A text-based adventure game exploring climate change through AI-driven conversations.</p>
                 <div class="tags">
                     <span class="tag">GPT-4</span>
                     <span class="tag">Climate Change</span>
-                    <span class="tag">Text Adventure Game</span>
+                    <span class="tag">Adventure Game</span>
                     <span class="tag">Social Good</span>
                 </div>
                 <div class="portfolio-links">
                     <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850" class="button">View Paper</a>
-                    <!-- <a href="https://github.com/latishab/eternagram" class="button">View Demo</a> -->
                 </div>
-
+            </div>
+            <div class="portfolio-item">
                 <h3>Frontend Diffusion</h3>
-                <p><strong>Qinshi Zhang</strong>, Latisha Besariani Hendra, Mohan Chi, Zijian Ding†</p>
-                <img src="./images/FD.png" alt="Project 1 Image">
-                <p>Frontend Diffusion is an end-to-end LLM-powered tool that generates high-quality websites from user
-                    sketches. Users can input a rough sketch on the canvas, which the system then transforms into a
-                    high-quality website page. You could use it to generate websites from sketch.</p>
+                <img src="./images/FD.png" alt="Frontend Diffusion Project">
+                <p><strong>Team:</strong> <strong>Qinshi Zhang</strong>, Latisha Besariani Hendra, Mohan Chi, Zijian
+                    Ding†</p>
+                <p>An LLM-powered tool generating high-quality websites from user sketches, bridging design and
+                    implementation.</p>
                 <div class="tags">
                     <span class="tag">Claude Sonnet</span>
-                    <span class="tag">Frontend Code Generation</span>
+                    <span class="tag">Frontend Generation</span>
                     <span class="tag">Prompt Engineering</span>
                 </div>
                 <div class="portfolio-links">
@@ -140,37 +123,34 @@
             </div>
         </section>
         <section id="news">
-            <h2>/News</h2>
-            <div class="news-list">
-                <div class="news-item">
-                    <p><strong>2024.06:</strong> I will be starting my internship at <a
-                            href="https://designlab.ucsd.edu/">UC San Diego Design Lab</a> this July. Excited to
-                        contribute to the <a href="https://d4sd.org/">D4SD</a> 2024 program!</p>
-                </div>
-                <div class="news-item">
-                    <p><strong>2024.01:</strong> I will be serving as a Student Volunteer at <a
-                            href="https://chi2024.acm.org/">CHI 2024</a>! See you in Hawai'i!</p>
-                </div>
-                <div class="news-item">
-                    <p><strong>2024.01:</strong> My Co-First Author Paper: 'Eternagram: Probing Player Attitudes Towards
-                        Climate Change Using a ChatGPT-driven Text-based Adventure.' Has been accepted to <a
-                            href="https://chi2024.acm.org/">
-                            CHI Conference on Human Factors in Computing Systems </a>.
-                        I am thrilled to share our findings and discuss the implications of using interactive games for
-                        climate awareness.</p>
-                </div>
-                <div class="news-item">
-                    <p><strong>2023.11:</strong> I will be serving as a Volunteer at <a
-                            href="https://chchi2023.icachi.org/">Chinese CHI 2023</a>.</p>
-                </div>
-                <div class="news-item">
-                    <p><strong>2023.07:</strong> I will be starting a research-based program at <a
-                            href="https://www.uci.edu/">UC Irvine</a> this
-                        September!</p>
-                </div>
+            <h2>News</h2>
+            <div class="news-item">
+                <p><strong>2024.06:</strong> I will be starting my internship at <a
+                        href="https://designlab.ucsd.edu/">UC San Diego Design Lab</a> this July. Excited to contribute
+                    to the <a href="https://d4sd.org/">D4SD</a> 2024 program!</p>
+            </div>
+            <div class="news-item">
+                <p><strong>2024.01:</strong> I will be serving as a Student Volunteer at <a
+                        href="https://chi2024.acm.org/">CHI 2024</a>! See you in Hawai'i!</p>
+            </div>
+            <div class="news-item">
+                <p><strong>2024.01:</strong> My Co-First Author Paper: 'Eternagram: Probing Player Attitudes Towards
+                    Climate Change Using a ChatGPT-driven Text-based Adventure.' Has been accepted to <a
+                        href="https://chi2024.acm.org/">CHI Conference on Human Factors in Computing Systems</a>. I am
+                    thrilled to share our findings and discuss the implications of using interactive games for climate
+                    awareness.</p>
+            </div>
+            <div class="news-item">
+                <p><strong>2023.11:</strong> I will be serving as a Volunteer at <a
+                        href="https://chchi2023.icachi.org/">Chinese CHI 2023</a>.</p>
+            </div>
+            <div class="news-item">
+                <p><strong>2023.07:</strong> I will be starting a research-based program at <a
+                        href="https://www.uci.edu/">UC Irvine</a> this September!</p>
             </div>
         </section>
     </div>
+
     <footer>
         <p>For more information:</p>
         <p>
@@ -181,7 +161,6 @@
         </p>
         <p>© 2024 Qinshi 'Carol' Zhang.</p>
     </footer>
-    <script src="./script.js"></script>
 </body>
 
 </html>
