--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <nav>
-            <div class="logo">Uni of California, San Diego</div>
+            <div class="logo">Qinshi Zhang</div>
             <div class="nav-links">
                 <a href="#home">Home</a>
                 <a href="#research-interests">Research</a>
@@ -28,7 +28,7 @@
                 <div class="text-content">
                     <h1>Qinshi (Carol) Zhang</h1>
                     <p><i class="fas fa-map-marker-alt"></i> CA, San Diego</p>
-                    <p><i class="fas fa-university"></i> University of California, San Diego</p>
+                    <p><i class="fas fa-university"></i> Uni of California, San Diego </p>
                     <div class="social-links">
                         <a href="mailto:qiz065@ucsd.edu" title="Email"><i class="fas fa-envelope"></i></a>
                         <a href="https://scholar.google.com/citations?user=Zo0HnLwAAAAJ&hl=zh-CN&oi=ao"
