--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <nav>
-            <div class="logo">Qinshi Zhang</div>
+            <div class="logo">Qinshi (Carol) Zhang</div>
             <div class="nav-links">
                 <a href="#home">Home</a>
                 <a href="#research-interests">Research</a>
@@ -26,7 +26,7 @@
             <div class="profile-section">
                 <img src="./images/carol.png" alt="Carol Zhang" class="profile-photo">
                 <div class="text-content">
-                    <h1>Qinshi (Carol) Zhang</h1>
+                    <h1>Carol Zhang</h1>
                     <p><i class="fas fa-map-marker-alt"></i> CA, San Diego</p>
                     <p><i class="fas fa-university"></i> Uni of California, San Diego </p>
                     <div class="social-links">
