--- a/index.html
+++ b/index.html
@@ -78,10 +78,20 @@
                 <h3><a href="https://arxiv.org/abs/2408.00778">Frontend Diffusion: Exploring Intent-Based User
                         Interfaces through Abstract-to-Detailed Task Transitions</a></h3>
                 <p><strong>Qinshi Zhang</strong>, Latisha Besariani Hendra, Mohan Chi, Zijian Ding†</p>
-                <p>Preprint</p>
+                <p>In preparation for <a href="https://chi2024.acm.org/for-authors/late-breaking-work/">CHI LBW</a></p>
                 <div class="publication-links">
                     <a href="https://arxiv.org/abs/2408.00778">[Arxiv]</a>
                     <a href="https://github.com/Carolzhangzz/frontendiffusion?tab=readme-ov-file">[Project Page]</a>
+                </div>
+            </div>
+            <div class="publication-item">
+                <h3><a href="https://arxiv.org/abs/2409.08486">Can AI Prompt Humans? Multimodal Agents Prompt
+                        Players' Game Actions and Show Consequences to Raise Sustainability Awareness</a></h3>
+                <p><strong>Qinshi Zhang</strong>, Ruoyu Wen, Zijian Ding, Latisha Besariani Hendra, Ray LC†</p>
+                <p>Preprint</p>
+                <div class="publication-links">
+                    <a href="https://arxiv.org/abs/2409.08486">[Arxiv]</a>
+                    <a href="https://github.com/Carolzhangzz/Eco_Echo">[Project Page]</a>
                 </div>
             </div>
         </section>
