--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <img src="./images/carol.png" alt="Carol Zhang" class="profile-photo">
                     <div class="social-links">
                         <a href="https://github.com/Carolzhangzz" title="Github"><i class="fab fa-github"></i></a>
-                        <a href="https://scholar.google.com/citatioans?user=Zo0HnLwAAAAJ&hl=zh-CN&oi=ao" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
+                        <a href="https://scholar.google.com/citations?user=Zo0HnLwAAAAJ&hl=zh-CN&oi=ao" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
                         <a href="https://orcid.org/0009-0005-1696-4685" title="ORCID"><i class="fab fa-orcid"></i></a>
                         <a href="https://twitter.com/Carol_Zhang1027" title="Twitter"><i class="fab fa-twitter"></i></a>
                         <a href="https://www.linkedin.com/in/qinshiz/" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
