--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
         </section>
         <section id="publications">
             <h2>Featured Publications</h2>
+
+            <p>Note: * indicates equal contribution; † indicates the corresponding author.
+            </p>
+            <br>
             <div class="publication-container">
                 <div class="publication-item">
                     <div class="publication-content">
@@ -87,7 +91,7 @@ year={2024}
                         <div class="publication-info">
                             <h3>Frontend Diffusion: Exploring Intent-Based User
                                 Interfaces through Abstract-to-Detailed Task Transitions</h3>
-                            <p class="authors">Qinshi Zhang</strong>, Latisha Besariani Hendra, Mohan Chi, Zijian Ding†</p>
+                            <p class="authors"><Strong>Qinshi Zhang</strong>, Latisha Besariani Hendra, Mohan Chi, Zijian Ding†</p>
                             <p class="venue">In preparation for <a href="https://chi2024.acm.org/for-authors/late-breaking-work/">CHI LBW</p>
                             <div class="publication-links">
                                 <!-- <a href="#" class="btn btn-sm">Project</a>
@@ -125,7 +129,7 @@ year={2024}
                         <div class="publication-info">
                             <h3>Can AI Prompt Humans? Multimodal Agents Prompt
                                 Players' Game Actions and Show Consequences to Raise Sustainability Awareness</h3>
-                            <p class="authors">Qinshi Zhang</strong>, Ruoyu Wen, Zijian Ding, Latisha Besariani Hendra, Ray LC†</p>
+                            <p class="authors"><Strong>Qinshi Zhang</strong>, Ruoyu Wen, Zijian Ding, Latisha Besariani Hendra, Ray LC†</p>
                             <p class="venue">Preprint</p>
                             <div class="publication-links">
                                 <!-- <a href="#" class="btn btn-sm">Project</a> -->
