--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                 <!-- <a href="#" class="btn btn-sm">Demo</a> -->
                                 <!-- <a href="#" class="btn btn-sm"> <i class="fas fa-video"></i> Video</a> -->
                                 <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850" class="btn btn-sm"> <i class="fas fa-file-pdf"></i> PDF</a>
-                                <a href="https://github.com/latishab/eternagram" class="btn btn-sm"> <i class="fas fa-code"></i> Code <span class="star-count">★ </span></a>
+                                <a href="https://github.com/Carolzhangzz/Eternagram_" class="btn btn-sm"> <i class="fas fa-code"></i> Code <span class="star-count">★ </span></a>
                             </div>
                             <div class="publication-extra">
                                 <a href="#" class="btn btn-sm bibtex-toggle">  <i class="fas fa-book"></i> BibTeX</a>
@@ -211,7 +211,7 @@ year={2024}
     </main>
 
     <footer>
-        <p>Designed and built by Qinshi (Carol) Zhang ❤️.</p>
+        <p>Designed and built by Qinshi (Carol) Zhang <i class="fas fa-heart"></i>.</p>
         <div class="footer-links">
             <a href="https://drive.google.com/file/d/1Oh7Fqo3stbtAhDU5FvZtEGRJL8FuHwi7/view?usp=sharing"><i class="far fa-file-alt"></i></a>
             <a href="https://github.com/Carolzhangzz"><i class="fab fa-github"></i></a>
