--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     </br>
                     <p>My research interests lie in <Strong>Human-AI Interaction for Social Impact</Strong> and <Strong>AI For Social Good</Strong>, especially the societal impact of technologies, surrounding sustainability, privacy leakage, and social justice concerns in general.</p>
                     </br>
-                    <p>I'm working with <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a> at UCSD. I also have worked with <a href="https://www.scm.cityu.edu.hk/people/ray-lc">Dr.Ray LC</a> at HK CityU on AI for Social Good, resulting in a <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">co-first authored paper</a> published at CHI 2024.</p>
+                    <p>I'm working with <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a> at <a href="https://designlab.ucsd.edu/">UCSD Design Lab</a>. I also have worked with <a href="https://www.scm.cityu.edu.hk/people/ray-lc">Dr.Ray LC</a> at HK CityU on AI for Social Good, resulting in a <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">co-first authored paper</a> published at CHI 2024.</p>
                      </br>
                     <p>I obtained my Bachelor's degree in Computer Science and Technology from the School of Information Engineering at <a href="https://english.cjlu.edu.cn/">China Jiliang University (CJLU)</a> and another degree in Computer and Information Science at <a href="https://www.aut.ac.nz/">Auckland University of Technology (AUT)</a>, advised by Dr. Lin Xiang and Dr. Haijun Tao.</p>
                 </div>
@@ -157,7 +157,7 @@ year={2024}
                     </div>
                 </div>
             </div>
-            <a href="#" class="see-all-link">see all publications</a>
+            <!-- <a href="#" class="see-all-link">see all publications</a> -->
         </section>
 
         <!-- <section id="projects">
@@ -178,36 +178,54 @@ year={2024}
         </section> 
     -->
 
-        <section id="news">
-            <h2>News</h2>
-            <div class="news-container">
-                <div class="news-item">
-                    <span class="date">2024.09</span>
-                    <p>Begin my MSCS program at UCSD this fall! See you in San Diego! </p>
+    <section id="news">
+        <h2>News</h2>
+        <div class="news-container">
+            <div class="news-item">
+                <span class="date">2024.10</span>
+                <div class="news-content">
+                    <p>Attending <a href="https://uist.acm.org/2024/">UIST'24</a>, See you in Pittsburgh !</p>
                 </div>
-                <div class="news-item">
-                    <span class="date">2024.06</span>
+            </div>
+            <div class="news-item">
+                <span class="date">2024.09</span>
+                <div class="news-content">
+                    <p>Begin my MSCS program at <a href="https://ucsd.edu/">UCSD</a> this fall! See you in San Diego!</p>
+                </div>
+            </div>
+            <div class="news-item">
+                <span class="date">2024.06</span>
+                <div class="news-content">
                     <p>Starting my internship at <a href="https://designlab.ucsd.edu/">UC San Diego Design Lab</a> this July. Excited to contribute to the <a href="https://d4sd.org/">D4SD</a> 2024 program!</p>
                 </div>
-                <div class="news-item">
-                    <span class="date">2024.01</span>
+            </div>
+            <div class="news-item">
+                <span class="date">2024.01</span>
+                <div class="news-content">
                     <p>Serving as a Student Volunteer at <a href="https://chi2024.acm.org/">CHI 2024</a>! See you in Hawai'i!</p>
                 </div>
-                <div class="news-item">
-                    <span class="date">2024.01</span>
+            </div>
+            <div class="news-item">
+                <span class="date">2024.01</span>
+                <div class="news-content">
                     <p>One Paper accepted to <a href="https://chi2024.acm.org/">CHI Conference on Human Factors in Computing Systems</a>.</p>
                 </div>
-                <div class="news-item">
-                    <span class="date">2023.11</span>
+            </div>
+            <div class="news-item">
+                <span class="date">2023.11</span>
+                <div class="news-content">
                     <p>Served as a Volunteer at <a href="https://chchi2023.icachi.org/">Chinese CHI 2023</a>.</p>
                 </div>
-                <div class="news-item">
-                    <span class="date">2023.07</span>
+            </div>
+            <div class="news-item">
+                <span class="date">2023.07</span>
+                <div class="news-content">
                     <p>Starting a research-based program at <a href="https://www.uci.edu/">UC Irvine</a> this September!</p>
                 </div>
             </div>
-            <!-- <button class="show-more">+ show more</button> -->
-        </section>
+        </div>
+        <button id="show-more-btn" class="show-more">+ show more</button>
+    </section>
     </main>
 
     <footer>
