--- a/cv.html
+++ b/cv.html
@@ -160,7 +160,7 @@
 
             <div class="research-item">
                 <h3>University of California, San Diego <span class="location">San Diego, CA</span></h3>
-                <p class="position"> Design for San Diego (D4SD) 2024 Internship Program, UCSD Design Lab</p>
+                <p class="position"> <a href="https://d4sd2024.ucsd.edu/">Design for San Diego (D4SD) 2024 Internship Program,</a>, UCSD Design Lab</p>
                 <p class="date">June. 2024 — Present</p>
                 <a href=" https://spdow.ucsd.edu/">Mentor: Prof.Steven Dow</a>
                 <p class="description">
@@ -199,19 +199,18 @@
             </div>
             <div class="research-item">
                 <h3>China Jiliang University<span class="location">Hangzhou, CN</span></h3>
-                <p class="position">Undergraduate Research, Department of Information Technology</p>
+                <p class="position"><a href="./PDF/poster.pdf#page=6.76">Undergraduate Research, </a>Department of Information Technology</p>
                 <p class="date">Sept. 2022 — May. 2023</p>
                 <p class="mentor">Mentor: Dr. Haijun Tao & Dr.Lin Xiang</p>
                 <p class="description">Developed a real-time video analysis framework using Gstreamer and YOLOv5 for
-                    object
-                    and person detection, achieving a maximum frame rate of 121 frames per second for RTSP
+                    object and person detection, achieving a maximum frame rate of 121 frames per second for RTSP
                     video streams </p>
                 <p class="description"> Constructed a dataset by collecting real-time video monitoring and detection
                     data. </p>
             </div>
             <div class="research-item">
                 <h3>Auckland University of Technology<span class="location">Auckland, NZ</span></h3>
-                <p class="position">Undergraduate Research, School of Engineering, Computer and Mathematical Sciences
+                <p class="position"><a href="./PDF/ball_pick.pdf">Undergraduate Research, </a>School of Engineering, Computer and Mathematical Sciences
                 </p>
                 <p class="date">Sept. 2022 — Dec. 2022</p>
                 <a
@@ -227,10 +226,10 @@
             <h2>Awards and Honors</h2>
 
             <div class="award-item">
-                <h3>2nd Prize,17th E-commerce Competition,Zhejiang Province(Class A) <span class="date">2022</span></h3>
+                <h3> <a href="./PDF/GreenBear- Recycling, Upcycling E-commerce Platform.pdf">2nd Prize,17th E-commerce Competition,</a> Zhejiang Province(Class A) <span class="date">2022</span></h3>
             </div>
             <div class="award-item">
-                <h3>HCIA Big Data Engineer Certificate<span class="date">2020</span></h3>
+                <h3><a href="./PDF/Big-Data Certificate-unlocked.pdf">HCIA Big Data Engineer Certificate</a><span class="date">2020</span></h3>
             </div>
             <div class="award-item">
                 <h3>Academic Scholarship, CJLU<span class="date">2020</span></h3>
