--- a/cv.html
+++ b/cv.html
@@ -160,7 +160,7 @@
 
             <div class="research-item">
                 <h3>University of California, San Diego <span class="location">San Diego, CA</span></h3>
-                <p class="position"> <a href="https://d4sd2024.ucsd.edu/">Design for San Diego (D4SD) 2024 Internship Program,</a>, UCSD Design Lab</p>
+                <p class="position"> <a href="https://d4sd2024.ucsd.edu/">Design for San Diego (D4SD) 2024 Internship Program,</a> UCSD Design Lab</p>
                 <p class="date">June. 2024 — Present</p>
                 <a href=" https://spdow.ucsd.edu/">Mentor: Prof.Steven Dow</a>
                 <p class="description">
@@ -178,10 +178,10 @@
                 <a href="https://www.stacybranham.com/">Mentor: Prof. Stacy Branham</a>
                 <p class="description">
                     Led team meeting coordination and slide presentation preparations and engaged in deep analysis and
-                    presentation of ADA Title II</p>
+                    presentation of ADA Title II.</p>
                 <p class="description">
                     EExplored and researched accessibility resources on the UCI ICS website, preparing detailed
-                    presentations on findings</p>
+                    presentations on findings.</p>
             </div>
 
             <div class="research-item">
@@ -190,12 +190,11 @@
                 <p class="date">June. 2023 — Sept.2023</p>
                 <a href="https://www.scm.cityu.edu.hk/people/ray-lc">Mentor: Dr. Ray LC</a>
                 <p class="description">Proposed the idea of a ChatGPT-based interactive game to promote climate change
-                    actions</p>
+                    actions.</p>
                 <p class="description">Developed a world-building game utilizing GPT-4 and other NLP techniques(as web
-                    devel-
-                    oper)</p>
+                    developer.</p>
                 <p class="description">Responsible for user studies, including recruiting, interviewing, data analysis,
-                    and writing, resulting a full paper to CHI’24</p>
+                    and writing, resulting a full paper to CHI’24.</p>
             </div>
             <div class="research-item">
                 <h3>China Jiliang University<span class="location">Hangzhou, CN</span></h3>
@@ -204,7 +203,7 @@
                 <p class="mentor">Mentor: Dr. Haijun Tao & Dr.Lin Xiang</p>
                 <p class="description">Developed a real-time video analysis framework using Gstreamer and YOLOv5 for
                     object and person detection, achieving a maximum frame rate of 121 frames per second for RTSP
-                    video streams </p>
+                    video streams. </p>
                 <p class="description"> Constructed a dataset by collecting real-time video monitoring and detection
                     data. </p>
             </div>
