--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
                 <div class="profile-text">
                     <p>Hi, I'm Carol Zhang. I'm a CS master student at UCSD.</p>
                     </br>
-                    <p>My research interests lie in <Strong>Human-AI Interaction for Social Impact</Strong> and
-                        <Strong>AI For Social Good</Strong>, especially the societal impact of technologies, surrounding
-                        sustainability, privacy leakage, and social justice concerns in general.
+                    <p>
+                        My research interests focus on <strong>Human-AI Interaction for Social Impact</strong> and <strong>AI for Social Good</strong>, particularly the societal implications of technology. This includes designing chatbots and integrating <strong>multimodal agents</strong> in games to promote sustainability awareness among players.
+                        
+                        Recently, I have also explored <strong>AI-powered productivity tools</strong>.
                     </p>
+                    
                     </br>
                     <p>I'm working with <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a> at <a
                             href="https://designlab.ucsd.edu/">UCSD Design Lab</a>. I also have worked with <a
