--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <p>
                         My research interests focus on <strong>Human-AI Interaction for Social Impact</strong> and <strong>AI for Social Good</strong>, particularly the societal implications of technology. This includes designing chatbots and integrating <strong>multimodal agents</strong> in games to promote sustainability awareness among players.
                         
-                        Recently, I have also explored <strong>AI-powered productivity tools</strong>.
+                        Recently, I have also explored <strong>AI for productivity tools</strong>.
                     </p>
                     
                     </br>
