--- a/index.html
+++ b/index.html
@@ -39,19 +39,28 @@
                 </div>
                 <div class="profile-image">
                     <img src="./images/carol.png" alt="Carol Zhang" class="profile-photo">
-                    <div class="social-links">
-                        <a href="https://github.com/Carolzhangzz" title="Github"><i class="fab fa-github"></i></a>
-                        <a href="https://scholar.google.com/citations?user=Zo0HnLwAAAAJ&hl=zh-CN&oi=ao"
-                            title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
-                        <a href="https://orcid.org/0009-0005-1696-4685" title="ORCID"><i class="fab fa-orcid"></i></a>
-                        <a href="https://twitter.com/Carol_Zhang1027" title="Twitter"><i class="fab fa-twitter"></i></a>
-                        <a href="https://www.linkedin.com/in/qinshiz/" title="LinkedIn"><i
-                                class="fab fa-linkedin"></i></a>
+                    <div class="social-links" style="font-size: 24px; display: flex; gap: 20px; justify-content: center;">
+                        <a href="https://github.com/Carolzhangzz" title="Github" style="color: #333; text-decoration: none;">
+                            <i class="fab fa-github"></i>
+                        </a>
+                        <a href="https://scholar.google.com/citations?user=Zo0HnLwAAAAJ&hl=zh-CN&oi=ao" title="Google Scholar" style="color: #4285f4; text-decoration: none;">
+                            <i class="fas fa-graduation-cap"></i>
+                        </a>
+                        <a href="https://twitter.com/Carol_Zhang1027" title="Twitter" style="color: #1DA1F2; text-decoration: none;">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/in/qinshiz/" title="LinkedIn" style="color: #0077B5; text-decoration: none;">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
+                        <a href="./cv.html" title="CV" style="color: #333; text-decoration: none; display: flex; align-items: center;">
+                            <i class="fas fa-file-pdf" style="margin-right: 4px;"></i>
+                            <span style="font-size:14px;">CV</span>
+                        </a>
                     </div>
                     <div class="cta-buttons">
-                        <a href="mailto:qiz065@ucsd.edu" class="btn btn-primary">Email</a>
+                        <!-- <a href="mailto:qiz065@ucsd.edu" class="btn btn-primary">Email</a>
                         <a href="#" class="btn btn-secondary">Blog</a>
-                        <a href="./cv.html" class="btn btn-tertiary">CV</a>
+                        <a href="./cv.html" class="btn btn-tertiary">CV</a> -->
                     </div>
                 </div>
             </div>
