--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <i class="fab fa-linkedin"></i>
                         </a>
                         <a href="./cv.html" title="CV" style="color: #333; text-decoration: none; display: flex; align-items: center;">
-                            <i class="fas fa-file-pdf" style="margin-right: 4px;"></i>
+                            <i class="fas fa-file-alt" style="margin-right: 4px;"></i>
                             <span style="font-size:14px;">CV</span>
                         </a>
                     </div>
