--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
                 <div class="profile-image">
                     <img src="./images/carol.png" alt="Carol Zhang" class="profile-photo">
                     <div class="social-links" style="font-size: 24px; display: flex; gap: 20px; justify-content: center;">
+                        <a href="./cv.html" title="CV" style="color: #333; text-decoration: none; display: flex; align-items: center;">
+                            <i class="fas fa-file-alt" style="margin-right: 4px;"></i>
+                            <span style="font-size:14px;"></span>
+                        </a>
                         <a href="https://github.com/Carolzhangzz" title="Github" style="color: #333; text-decoration: none;">
                             <i class="fab fa-github"></i>
                         </a>
@@ -51,10 +55,6 @@
                         </a>
                         <a href="https://www.linkedin.com/in/qinshiz/" title="LinkedIn" style="color: #0077B5; text-decoration: none;">
                             <i class="fab fa-linkedin"></i>
-                        </a>
-                        <a href="./cv.html" title="CV" style="color: #333; text-decoration: none; display: flex; align-items: center;">
-                            <i class="fas fa-file-alt" style="margin-right: 4px;"></i>
-                            <span style="font-size:14px;">CV</span>
                         </a>
                     </div>
                     <div class="cta-buttons">
