--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Qinshi (Carol) Zhang</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Shadows+Into+Light&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 
@@ -20,11 +22,14 @@
                     <p>Hi, I'm Carol Zhang. I'm a CS master student at UCSD.</p>
                     </br>
                     <p>
-                        My research interests focus on <strong>Human-AI Interaction for Social Impact</strong> and <strong>AI for Social Good</strong>, particularly the societal implications of technology. This includes designing chatbots and integrating <strong>multimodal agents</strong> in games to promote sustainability awareness among players.
-                        
-                        Recently, I have also explored <strong>AI for productivity tools</strong>.
+                        My research interests focus on <strong>Human-AI Interaction for Social Impact</strong> and
+                        <strong>AI for Social Good</strong>, particularly the societal implications of technology. This
+                        includes designing chatbots and integrating <strong>multimodal agents</strong> in games to
+                        promote sustainability awareness among players.
+
+                        Recently, I have also explored <strong>AI for productivity tools.</strong>.
                     </p>
-                    
+
                     </br>
                     <p>I'm working with <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a> at <a
                             href="https://designlab.ucsd.edu/">UCSD Design Lab</a>. I also have worked with <a
@@ -39,21 +44,27 @@
                 </div>
                 <div class="profile-image">
                     <img src="./images/carol.png" alt="Carol Zhang" class="profile-photo">
-                    <div class="social-links" style="font-size: 24px; display: flex; gap: 20px; justify-content: center;">
-                        <a href="./cv.html" title="CV" style="color: #333; text-decoration: none; display: flex; align-items: center;">
+                    <div class="social-links"
+                        style="font-size: 24px; display: flex; gap: 20px; justify-content: center;">
+                        <a href="./cv.html" title="CV"
+                            style="color: #333; text-decoration: none; display: flex; align-items: center;">
                             <i class="fas fa-file-alt" style="margin-right: 4px;"></i>
                             <span style="font-size:14px;"></span>
                         </a>
-                        <a href="https://github.com/Carolzhangzz" title="Github" style="color: #333; text-decoration: none;">
+                        <a href="https://github.com/Carolzhangzz" title="Github"
+                            style="color: #333; text-decoration: none;">
                             <i class="fab fa-github"></i>
                         </a>
-                        <a href="https://scholar.google.com/citations?user=Zo0HnLwAAAAJ&hl=zh-CN&oi=ao" title="Google Scholar" style="color: #4285f4; text-decoration: none;">
+                        <a href="https://scholar.google.com/citations?user=Zo0HnLwAAAAJ&hl=zh-CN&oi=ao"
+                            title="Google Scholar" style="color: #4285f4; text-decoration: none;">
                             <i class="fas fa-graduation-cap"></i>
                         </a>
-                        <a href="https://twitter.com/Carol_Zhang1027" title="Twitter" style="color: #1DA1F2; text-decoration: none;">
+                        <a href="https://twitter.com/Carol_Zhang1027" title="Twitter"
+                            style="color: #1DA1F2; text-decoration: none;">
                             <i class="fab fa-twitter"></i>
                         </a>
-                        <a href="https://www.linkedin.com/in/qinshiz/" title="LinkedIn" style="color: #0077B5; text-decoration: none;">
+                        <a href="https://www.linkedin.com/in/qinshiz/" title="LinkedIn"
+                            style="color: #0077B5; text-decoration: none;">
                             <i class="fab fa-linkedin"></i>
                         </a>
                     </div>
@@ -66,7 +77,7 @@
             </div>
         </section>
         <section id="publications">
-            <h2>Featured Publications</h2>
+            <h2>Featured Projects</h2>
 
             <p>Note: * indicates equal contribution; † indicates the corresponding author.</p>
             <br>
@@ -185,6 +196,28 @@
                     </div>
                 </div>
             </div>
+            <div class="publication-container">
+                <div class="publication-item">
+                    <div class="publication-content">
+                        <div class="publication-image">
+                            <img src="./images/d4sd.png" alt="D4SD 2024 Publication" class="scaled-image">
+                        </div>
+                        <div class="publication-info">
+                            <h3>Design for San Diego 2024</h3>
+                            <p class="venue">Served as Web Dev Lead</p>
+                            <div class="publication-links">
+                                <a href="https://d4sd2024.ucsd.edu/" class="btn btn-sm">
+                                    <i class="fas fa-link"></i> Visit Website
+                                </a>
+                                <a href="https://d4sd2024.ucsd.edu/about/" class="btn btn-sm">
+                                    <i class="fas fa-users"></i> About Our Team
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div>
         </section>
 
         <!-- <section id="projects">
@@ -264,8 +297,7 @@
     <footer>
         <p>Designed and built by Qinshi (Carol) Zhang <i class="fas fa-heart"></i>.</p>
         <div class="footer-links">
-            <a href="./cv.html"><i
-                    class="far fa-file-alt"></i></a>
+            <a href="./cv.html"><i class="far fa-file-alt"></i></a>
             <a href="https://github.com/Carolzhangzz"><i class="fab fa-github"></i></a>
             <a href="https://scholar.google.com/citations?user=Zo0HnLwAAAAJ&hl=zh-CN&oi=ao"><i
                     class="fas fa-graduation-cap"></i></a>
