--- a/cv.html
+++ b/cv.html
@@ -209,7 +209,7 @@
             </div>
             <div class="research-item">
                 <h3>Auckland University of Technology<span class="location">Auckland, NZ</span></h3>
-                <p class="position"><a href="./PDF/ball_pick.pdf">Undergraduate Research, </a>School of Engineering, Computer and Mathematical Sciences
+                <p class="position"><a href="./PDF/Final_Brief.pdf">Undergraduate Research, </a>School of Engineering, Computer and Mathematical Sciences
                 </p>
                 <p class="date">Sept. 2022 — Dec. 2022</p>
                 <a
