--- a/cv.html
+++ b/cv.html
@@ -67,6 +67,12 @@
                             class="fas fa-file-pdf"></i> PDF</a>
                     <a href="https://github.com/Carolzhangzz/Eternagram_" class="btn btn-sm"> <i
                             class="fas fa-code"></i> Code <span class="star-count">★</span></a>
+                            <a href="https://your-video-link-here.com" class="btn btn-sm">
+                                <i class="fas fa-video"></i> Video
+                            </a>
+                            <a href="https://your-project-link-here.com" class="btn btn-sm">
+                                <i class="fas fa-project-diagram"></i> Project
+                            </a>
                     <!-- <a href="#" class="poster"><i class="fas fa-image"></i> Poster</a> -->
                     <a href="#" class="bibtex-toggle"><i class="fas fa-quote-right"></i> BibTeX</a>
                     <!-- <span class="award"><i class="fas fa-award"></i> Best Short Paper Award, Honorable Mention</span> -->
