--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
         </section>
         <section id="publications">
-            <h2>Featured Projects</h2>
+            <h2>Featured Publications</h2>
 
             <p>Note: * indicates equal contribution; † indicates the corresponding author.</p>
             <br>
@@ -95,6 +95,12 @@
                                 Jussi Holopainen, Ray LC†</p>
                             <p class="venue">CHI Conference on Human Factors in Computing Systems 2024</p>
                             <div class="publication-links">
+                                <a href="https://recfro.github.io/eternagram/" class="btn btn-sm">
+                                    <i class="fas fa-project-diagram"></i> Project
+                                </a>
+                                <a href="https://www.youtube.com/watch?v=lvC-KcD2qRE&t=6s" class="btn btn-sm">
+                                    <i class="fas fa-video"></i> Video
+                                </a>
                                 <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850" class="btn btn-sm"><i
                                         class="fas fa-file-pdf"></i> PDF</a>
                                 <a href="https://github.com/Carolzhangzz/Eternagram_" class="btn btn-sm"><i
