--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         includes designing chatbots and integrating <strong>multimodal agents</strong> in games to
                         promote sustainability awareness among players.
 
-                        Recently, I have also explored <strong>Autonomous Al agent workflow for productivity.</strong>
+                        Recently, I have also explored <strong>Al for productivity tools.</strong>
                     </p>
 
                     </br>
