--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                         Good, resulting in a <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">co-first
                             authored paper</a> published at CHI 2024.</p>
                     </br>
-                    <p>I obtained my Bachelor's degree in Computer Science and Technology from the School of Information
+                    <!-- <p>I obtained my Bachelor's degree in Computer Science and Technology from the School of Information
                         Engineering at <a href="https://english.cjlu.edu.cn/">China Jiliang University (CJLU)</a> and
                         another degree in Computer and Information Science at <a href="https://www.aut.ac.nz/">Auckland
-                            University of Technology (AUT)</a>, advised by Dr. Lin Xiang and Dr. Haijun Tao.</p>
+                            University of Technology (AUT)</a>, advised by Dr. Lin Xiang and Dr. Haijun Tao.</p> -->
                 </div>
                 <div class="profile-image">
                     <img src="./images/carol.png" alt="Carol Zhang" class="profile-photo">
